# nRF-Datastream

./: README.md
docs/: README.md
firmware/: CMakeLists.txt  README.md  prj.conf
firmware/boards/: README.md  nrf54l15dk.overlay
firmware/drivers/: imu_lsm6dsv32x.c  imu_lsm6dsv32x.h
firmware/include/: app_config.h  gatt_service.h
firmware/services/: gatt_service.c  gatt_uuids.h
firmware/src/: main.c
host/: README.md  pyproject.toml
host/examples/: subscribe_and_log.py
host/nrf_ble/: json_writer.py
host/nrf_metrics/: ball.py  cli.py  client.py  insole.py  parser.py  uuids.py
host/tests/: test_parser.py
integration/: Ball_Insole_Metrics.jsonl
integration/integrated/: ball.py  config.py  daq.py  insole.py  main.py  metrics.py  scanner.py
shared/docs/: protocol.md
shared/proto/: uuids.json
tools/: flash_zephyr.sh.txt  plot_log.py
uc_host_proj/arduino/: cloud_task.ino  device_to_cloud.ino  discover_devices.py.py  main.ino
uc_host_proj/nrf54l15/src/: main.c  prj.conf.txt
